# UR3_controller_ROSjazzy

./: README.md
UR3_controller_ROSjazzy-main/: README.md
UR3_controller_ROSjazzy-main/my_ur3/: package.xml  setup.cfg  setup.py
UR3_controller_ROSjazzy-main/my_ur3/config/: gz_bridge.yaml
UR3_controller_ROSjazzy-main/my_ur3/launch/: displayURDF.launch.xml  displayXACRO.launch.xml  gazebo.launch.xml
UR3_controller_ROSjazzy-main/my_ur3/urdf/: ur3_mesh_based.urdf  ur3_mesh_based.urdf.xacro  ur_arm.urdf
UR3_controller_ROSjazzy-main/my_ur3/worlds/: my_world.world
my_ur3/: package.xml  setup.py
