<?xml version="1.0"?>
<package format="3">
  <name>my_ur3</name>
  <version>0.0.0</version>
  <description>UR3 Robot Package</description>
  <maintainer email="sigurd.gresberg@gmail.com">Sigurd Gresberg</maintainer>
  <license>Apache License 2.0</license>

  <!-- Declare Python build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <!-- Add other ROS dependencies -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
